[package]
name = "AV1Master"
version = "0.1.0"
authors = ["Daniel Løvbrøtte Olsen <daniel@dodsorf.as>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"

serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_repr = "0.1"

uuid = { version = "0.7", features = ["serde", "v4"] }

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json", "uuid"]
